--- a/app/templates_email/create_new_account_need_verification.html
+++ b/app/templates_email/create_new_account_need_verification.html
@@ -37,8 +37,8 @@
 
         <p>Debes validar tu cuenta desde el siguiente enlace:</p>
         <p>
-            <a href='http://localhost:8080/foro-ddr/index.php?url=UserController/verification/{{key}}'>
-                http://localhost:8080/foro-ddr/index.php?url=UserController/verification/{{key}}
+            <a href='http://localhost:8080/foro-ddr/user-verification/{{key}}'>
+                http://localhost:8080/foro-ddr/user-verification/{{key}}
             </a>
         </p>
         
