--- a/app/templates_email/create_new_account_success.html
+++ b/app/templates_email/create_new_account_success.html
@@ -44,8 +44,8 @@
         <p>Puedes loguearte desde este enlace: </p>
 
         <p>
-            <a href="http://localhost:8080/foro-ddr/index.php?url=LoginController/display/">
-                http://localhost:8080/foro-ddr/index.php?url=LoginController/display/
+            <a href="http://localhost:8080/foro-ddr/login-form">
+                http://localhost:8080/foro-ddr/foro-ddr/login-form
             </a>
         </p>
 
