--- a/app/templates_email/edit_password.html
+++ b/app/templates_email/edit_password.html
@@ -42,8 +42,8 @@
         <p>Puedes hacerlo desde el siguiente enlace: </p>
 
         <p>
-            <a href="http://localhost:8080/foro-ddr/index.php?url=UserController/edit_password/{{key}}">
-                http://localhost:8080/foro-ddr/index.php?url=UserController/edit_password/{{key}}
+            <a href="http://localhost:8080/foro-ddr/editar-password/{{key}}">
+                http://localhost:8080/foro-ddr/editar-password/{{key}}
             </a>
         </p>
 
